--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
             <div class="cta-row">
               <!-- TROQUE pelo link da Play Store -->
-              <a class="btn btn-primary" href="#" onclick="alert('Coloque aqui o link da Play Store / APK.'); return false;">📱 Baixar agora</a>
+              <a class="btn btn-primary" href="#" onclick="alert('https://github.com/Jacker-s/MeuHolerite/releases/download/1.7/app-release.apk'); return false;">📱 Baixar agora</a>
               <a class="btn btn-ghost" href="#funcionalidades">✨ Principais funcionalidades</a>
             </div>
 
