--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 
         <div style="margin-top:18px; display:flex; gap:12px; flex-wrap:wrap;" class="reveal">
           <!-- TROQUE pelo link real -->
-          <a class="btn btn-primary" href="#" onclick="alert('Coloque aqui o link da Play Store / APK.'); return false;">⬇️ Baixar o app</a>
+          <a class="btn btn-primary" href="https://github.com/Jacker-s/MeuHolerite/releases/download/1.7/app-release.apk" onclick="alert('Coloque aqui o link da Play Store / APK.'); return false;">⬇️ Baixar o app</a>
           <a class="btn btn-ghost" href="mailto:suporte@seudominio.com" onclick="alert('Troque o e-mail de suporte no HTML.'); return false;">✉️ Falar com suporte</a>
         </div>
       </div>
