--- a/index.html
+++ b/index.html
@@ -417,7 +417,9 @@
         <nav class="nav">
           <a href="#prints">Prints</a>
           <a href="#funcionalidades">Funcionalidades</a>
-          <a href="#privacidade">Privacidade</a>
+          <a href="./privacidade/">Privacidade</a><span class="sep">•</span>
+<a href="./termos/">Termos</a>
+
           <a href="#faq">FAQ</a>
         </nav>
 
