--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
         <div style="margin-top:18px; display:flex; gap:12px; flex-wrap:wrap;" class="reveal">
           <a class="btn btn-primary" id="btnBottom" href="#" download>⬇️ Baixar agora</a>
           <!-- TROQUE AQUI pelo seu email real -->
-          <a class="btn btn-ghost" href="mailto:suporte@seudominio.com">✉️ suporte@seudominio.com</a>
+          <a class="btn btn-ghost" href="mailto:jacksonsu.silva@gmail.com">✉️ jacksonsu.silva@gmail.com</a>
           <a class="btn btn-ghost" href="./termos/">📄 Termos</a>
         </div>
       </div>
