--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
           <div class="card feat reveal">
             <div class="ico">📩</div>
             <h3>Suporte</h3>
-            <p>Edite o e-mail abaixo no código para seu contato oficial.</p>
+            <p>jacksonsu.silva@gmail.com.</p>
           </div>
         </div>
 
