--- a/index.html
+++ b/index.html
@@ -610,12 +610,13 @@
               <span class="badge">📥 Importação do ePays</span>
               <span class="badge">⏱️ Banco de horas</span>
               <span class="badge">🔔 Aviso de faltas</span>
-              <span class="badge">💳 Saldo Alelo</span>
+              <span class="badge">💳 Saldo Alelo Em Breve</span>
             </div>
 
             <div class="note">
               ⚠️ <b>Instalação via APK:</b> após baixar, o Android pode pedir para permitir
               <b>“Instalar apps desconhecidos”</b>. Isso é normal quando o app não vem da Play Store.
+              <b> Em breve estava na Play Store Para maior segurança!</b>
             </div>
           </div>
 
