--- a/index.html
+++ b/index.html
@@ -790,14 +790,14 @@
           <div class="card feat reveal">
             <div class="ico">📩</div>
             <h3>Suporte</h3>
-            <p>jacksonsu.silva@gmail.com.</p>
+            <p>E-mail de Suporte em breve.</p>
           </div>
         </div>
 
         <div style="margin-top:18px; display:flex; gap:12px; flex-wrap:wrap;" class="reveal">
           <a class="btn btn-primary" id="btnBottom" href="#" download>⬇️ Baixar agora</a>
           <!-- TROQUE AQUI pelo seu email real -->
-          <a class="btn btn-ghost" href="mailto:jacksonsu.silva@gmail.com">✉️ jacksonsu.silva@gmail.com</a>
+          <a class="btn btn-ghost" href="mailto:aqui@mail.com">✉️ E-mail de Suporte em breve.</a>
           <a class="btn btn-ghost" href="./termos/">📄 Termos</a>
         </div>
       </div>
