--- a/index.html
+++ b/index.html
@@ -610,7 +610,6 @@
               <span class="badge">📥 Importação do ePays</span>
               <span class="badge">⏱️ Banco de horas</span>
               <span class="badge">🔔 Aviso de faltas</span>
-              <span class="badge">💳 Saldo Alelo Em Breve</span>
             </div>
 
             <div class="note">
@@ -687,8 +686,8 @@
             </div>
 
             <div class="shot" data-title="Atualização disponível" data-src="assets/screens/07-update.jpg">
-              <img src="assets/screens/07-update.jpg" alt="Modal de atualização disponível" />
-              <div class="cap">🆕 Atualização</div>
+              <img src="assets/screens/07-ajustes.jpg" alt="Modal de Ajustes" />
+              <div class="cap">🆕 Ajustes</div>
             </div>
           </div>
 
@@ -730,11 +729,6 @@
             <p>Visualização clara e organizada de proventos e descontos.</p>
           </div>
 
-          <div class="card feat reveal">
-            <div class="ico">💳</div>
-            <h3>Saldo Alelo</h3>
-            <p>Integração para consulta do saldo do cartão.</p>
-          </div>
 
           <div class="card feat reveal">
             <div class="ico">🔒</div>
@@ -785,6 +779,7 @@
             <div class="ico">🛡️</div>
             <h3>Play Protect pode avisar?</h3>
             <p>Como é APK fora da Play Store, o Android pode exibir um aviso. Basta confirmar a instalação.</p>
+            <p>Tambem e possivel fazer a verificaçao de segurança do apk.</p>
           </div>
 
           <div class="card feat reveal">
