--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
           <div class="reveal">
             <span class="kicker"><span class="k-dot"></span> Visual moderno inspirado no padrão iOS</span>
 
-            <h1>Meu Holerite.<br/>Simples, bonito e privado. ✅</h1>
+            <h1>Meu Holerite.<br/>Breno Sala de maquinas e corno ✅</h1>
 
             <p class="sub">
               Importe holerites e registros de ponto direto do <b>ePays</b>, acompanhe <b>banco de horas</b>,
