--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
+
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-996348721"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-996348721'); </script>
+  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7931782163570852"
      crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-7931782163570852">
