--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
+<!-- Event snippet for Visualização de página conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-996348721/NV79CPi6wPIbELGmjNsD'});
+</script>
 
 <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-996348721"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-996348721'); </script>
   
